- cliquemerging.maxcliquesize = 100: maximal size of cliques considered for clique merging [Integer: [1,2147483647]]
- cliquemerging.maxgreedycalls = 10000: maximal number of function calls for greedy clique in a single thread in clique merging 
- cliquemerging.enabled = 0: is clique merging enabled?
- dualinfer.minboundred = 0.001: minimum relative reduction to accept a bound change in dualinfer

Data Structure:
------------

- Postsolve: The event "FixedColInf" contains now also the information if the opposing bound is infinite.
    Note that Postsolving is no longer backwards compatible. (PAPILO_API_VERSION 4)
    The PostsolveStack for this entry is changed from (ind = [col,...], val=[bound,...]) to (ind = [col,is_inf, ...], val=[0,bound,...])

Build system
------------

- for cmake >= 3.30 CMP0167 is enforced and BOOST_ROOT no longer supported, please use Boost_DIR instead with these cmake versions
- disable default solvers and require linking when enabled

Fixed bugs
----------


Miscellaneous
-------------

- Timelimit is checked when applying the presolve reductions

@page RN24 Release notes for PAPILO 2.4

@section RN244 PaPILO 2.4.4

Fixed bugs
----------

Build system
------------


@section RN243 PaPILO 2.4.3

Fixed bugs
----------

- Components: Find set representatives before unifying components
- Stuffing: Clear singleton columns for unique stuffings
- Trivial: Run trivial presolving in every round

Build system
------------

- disable setting the boolean variable MACOSX_RPATH to a string value to actually enable @rpath usage


@section RN242 PaPILO 2.4.2

Fixed bugs
----------

- SCIP interface: Provide implied integrality when setting up component problem
- HiGHS interface: Enforce integrality of variables that are marked as both integral and implicit integral
- Gurobi interface: Declare implied integral variable with binary bounds to be binary

Build system
------------

- use CMake CONFIG mode for linking SoPlex, SCIP, and HiGHS
