@@ -36,7 +36,7 @@
 #define PAPILO_VERSION_PATCH 0
 #define PAPILO_VERSION_TWEAK 0
 
-#define PAPILO_API_VERSION 8
+#define PAPILO_API_VERSION 9
 
 #undef PAPILO_GITHASH_AVAILABLE
 #undef PAPILO_GITHASH
