@@ -217,6 +217,8 @@ ConstraintPropagation<REAL>::execute( const Problem<REAL>& problem,
       };
       for( int row : changedactivities )
       {
+         if( reductions.size() >= problemUpdate.getPresolveOptions().max_reduction )
+            break;
          auto rowvec = consMatrix.getRowCoefficients( row );
 
          // in sequential mode no intermediate trivial presolving is performed
