@@ -83,6 +83,8 @@ FixContinuous<REAL>::execute( const Problem<REAL>& problem,
 
    for( int i = 0; i < ncols; ++i )
    {
+      if( reductions.size() >= problemUpdate.getPresolveOptions().max_reduction )
+         break;
       // do not fix columns which are inactive, unbounded, integral,
       // or have feasibly distinct bounds
       if( cflags[i].test( ColFlag::kInactive, ColFlag::kUnbounded, ColFlag::kIntegral )
