@@ -98,6 +98,8 @@ ImplIntDetection<REAL>::execute( const Problem<REAL>& problem,
    {
       for( int col = 0; col < ncols; ++col )
       {
+         if( reductions.size() >= problemUpdate.getPresolveOptions().max_reduction )
+            break;
          if( perform_implied_integer_task(
                  problemUpdate, num, reductions, cflags, consmatrix, lhs_values,
                  rhs_values, lower_bounds, upper_bounds, rflags,
