@@ -101,6 +101,8 @@ SimpleProbing<REAL>::execute( const Problem<REAL>& problem,
    {
       for( int i = 0; i < nrows; ++i )
       {
+         if( reductions.size() >= problemUpdate.getPresolveOptions().max_reduction )
+            break;
          if( perform_simple_probing_step(
                  num, reductions, domains, cflags, activities, constMatrix,
                  rhs_values, rowsize, rflags, i ) == PresolveStatus::kReduced )
